@@ -55,7 +55,6 @@ class Expression;
  - defaultValue
  - caption (user readable name that can be e.g. translated)
  - description (user readable name additional text, can be useful for developers)
- - width (a hint for displaying in tabular mode or as text box)
 
  Field can also have assigned expression (see Predicate::Expression class,
  and expression() method).
@@ -167,8 +166,7 @@ public:
           uint maxLength = 0, uint precision = 0,
           QVariant defaultValue = QVariant(),
           const QString& caption = QString(),
-          const QString& description = QString(),
-          uint width = 0);
+          const QString& description = QString());
 
     /*! Copy constructor. */
     Field(const Field& f);
@@ -498,12 +496,6 @@ public:
         return m_desc;
     }
 
-    /*! @return width of this field (usually in pixels or points)
-    0 (the default) means there is no hint for the width. */
-    inline uint width() const {
-        return m_width;
-    }
-
     //! if the type has the unsigned attribute
     inline bool isUnsigned() const {
         return m_options & Unsigned;
@@ -626,12 +618,6 @@ public:
         m_desc = description;
     }
 
-    /*! Sets visible width for this field to @a w
-     (usually in pixels or points). 0 means there is no hint for the width. */
-    void setWidth(uint w) {
-        m_width = w;
-    }
-
     /*! There can be added asterisks (QueryAsterisk objects)
      to query schemas' field list. QueryAsterisk subclasses Field class,
      and to check if the given object (pointed by Field*)
@@ -728,7 +714,6 @@ protected:
     int m_order;
     QString m_caption;
     QString m_desc;
-    uint m_width;
     QVector<QString> m_hints;
 
     Expression* m_expr;
